Closed Bug 68212 Opened 25 years ago Closed 25 years ago

SEND PAGE: HTML pages are sent as raw HTML code, not rendered

Categories

(MailNews Core :: Composition, defect, P2)

defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.8

People

(Reporter: jaimejr, Assigned: bugzilla)

References

()

Details

(Keywords: regression, testcase, Whiteboard: [nsbeta1+])

Attachments

(2 files)

Build ID: 2001020804 Reproducible: Frequently Steps: 1. Launch N6 2. Enter http://news.cnet.com/news/0-1005-200-4755462.html into the location bar 3. Select 'Send Page' from the File menu. 4. Enter mail addresses into the mail compose window. 5. Click on the Send button. Results: eMailed article is sent as raw HTML code. Note: Please see email sent to Ester.
over to ducarroz.
Assignee: sspitzer → ducarroz
I just tried this on my mac, and it worked fine. weird that it is not reproducable 100% of the time. are you sure we aren't sending it properly, or that we aren't displaying it properly. I bet it is a problem with not displaying it properly, and we lose the content type on the channel. (we've got a few bugs like that, especially on news.) this was read in your IMAP account, not POP right? once you get into this state, can you see if switching folders fixes it? if I'm right, it is a bug for mscott, not ducarroz. but I'll want to hear from jaime before re-assigning.
~ Seth Actually, I've seen it both in my saved Send folder, and well as on the recipient's Inbox. Does that help? Do u need to come see my box???
QA Contact: esther → fenella
the recipients inbox? is it 100% reproduce in their inbox? what mail client were they using?
adding myself to the cc list so I can get jaime's response.
i also see this on linux [2001.02.09.08 comm bits]. here's a testcase: 0. i'm using a migrated profile that's been setup to us IMAP. also have turned on the pref [in Acct Settings] to use compose msgs in HTML. 1. within a browser window, go to http://www.kith.org/ 2. select File > Send Page --i addressed the email to myself in the mail compose window. 3. send the email. 4. in the mail [3pane] window, click Get Msg button and select that email to view it. expected: when viewing the email, the attached page should be rendered like a webpage. result: when viewing the email, the attached page is displayed as html [plaintext] source. in fact, it's displayed this way in both N6.x and N4.7x. will attach screenshots.
OS: other → All
Hardware: PC → All
thanks for the test case, sarah. I was confused. I thought this was like bug #59449 (see that bug for a screen shot) ducarroz seems like the proper owner for this.
I've been able to reproduce this and have seen a bunch of reports about this. Putting on mozilla0.9 radar.
Keywords: nsbeta1
Whiteboard: [nsbeta1+]
Target Milestone: --- → mozilla0.9
This is Sheela's area now.
QA Contact: fenella → sheelar
I can also reproduce that with a Windows build from 2001020220. For some reason, the content type of the attachment (the page your are sending) is set to text/plain instead of text/html. This is a message compose bug.
Status: NEW → ASSIGNED
Component: Mail Window Front End → Composition
Priority: -- → P2
I know what's the problem. I've accidently ifdefed code on non Mac platform (nsMsgAttachmentHandler.cpp, line 402). I'll attach a patch soon...
here is the fix: Index: nsMsgAttachmentHandler.cpp =================================================================== RCS file: /cvsroot/mozilla/mailnews/compose/src/nsMsgAttachmentHandler.cpp,v retrieving revision 1.64 diff -w -u -4 -r1.64 nsMsgAttachmentHandler.cpp --- nsMsgAttachmentHandler.cpp 2001/02/07 06:52:20 1.64 +++ nsMsgAttachmentHandler.cpp 2001/02/14 23:16:12 @@ -398,19 +398,19 @@ if (ma != nsnull) { ma->m_size = totalSize; -#ifdef XP_MAC if (aContentType) { +#ifdef XP_MAC //Do not change the type if we are dealing with an apple double file if (!ma->mAppleFileSpec) +#endif { PR_FREEIF(ma->m_type); ma->m_type = PL_strdup(aContentType); } } -#endif if (aCharset) { PR_FREEIF(ma->m_charset);
we should consider this fix for Mozilla 0.8 if it's not too late.
Keywords: regression
Whiteboard: [nsbeta1+] → [nsbeta1+] Fix in hand
sr=mscott
asa has given this a=asa for 0.8, but you got to do it quick, the train is leaving in 15 minutes.
Target Milestone: mozilla0.9 → mozilla0.8
Fix checked in the Mozilla 0.8 branch
Checked in the trunk too.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Whiteboard: [nsbeta1+] Fix in hand → [nsbeta1+]
verified commercial trunk build and will verify on branch when it is available. Leaving bug as resolved fixed untill verify it on branch. buildid: 2001021908 linux 2001021904 mac 2001021908 win98
Marking bug as verified according to Paul Wyskoczka and see the builds in the comments above.
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: