Fix for bug 68212. Oops, I've ifdefed too much code. R=sspitzer, SR=mscott, A=asa